@@ -1,3 +1,7 @@
+drkns 17.06.2016 15:12:33 +0200 - build 4710
+
+1. Восстановим работоспособность в Win2k.
+
 w17 16.06.2016 19:27:33 +0300 - build 4709
 
 1. Снова уточнение 4697.
